--- a/Host File Modifier/Host File Modifier.csproj
+++ b/Host File Modifier/Host File Modifier.csproj
@@ -35,6 +35,9 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="Octokit, Version=0.29.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Octokit.0.29.0\lib\net45\Octokit.dll</HintPath>
     </Reference>
@@ -50,6 +53,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdditionalHostsUI.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AdditionalHostsUI.Designer.cs">
+      <DependentUpon>AdditionalHostsUI.cs</DependentUpon>
+    </Compile>
+    <Compile Include="EditHostsUI.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EditHostsUI.Designer.cs">
+      <DependentUpon>EditHostsUI.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainUI.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -58,12 +73,19 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Variables.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="AdditionalHostsUI.resx">
+      <DependentUpon>AdditionalHostsUI.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EditHostsUI.resx">
+      <DependentUpon>EditHostsUI.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainUI.resx">
       <DependentUpon>MainUI.cs</DependentUpon>
     </EmbeddedResource>
